--- a/src/app/shared/scoreboards/admin-forms/input-number-with-buttons/input-number-with-buttons.component.html
+++ b/src/app/shared/scoreboards/admin-forms/input-number-with-buttons/input-number-with-buttons.component.html
@@ -1,6 +1,6 @@
 <div class="input-number-with-buttons">
   <tui-input-number
-    [tuiTextfieldSize]="'m'"
+    [tuiTextfieldSize]="size"
     class="input-number"
     [formControl]="control"
     [tuiTextfieldCleaner]="true"
