football events first down id calc distance < 0

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -163,9 +163,9 @@
                             [min]="-49"
                             [max]="50"
                           >
-                            {{ 'Ball Moved On' | uppercase }}
+                            {{ 'Ball Moved' | uppercase }}
                             <input
-                              name="{{ 'Ball Moved On' | uppercase }}"
+                              name="{{ 'Ball Moved' | uppercase }}"
                               tuiTextfield
                             />
                           </tui-input-number>
