--- a/src/app/components/match-event/football-event/add-edit-football-event-table/football-event-short-view/football-event-short-view.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/football-event-short-view/football-event-short-view.component.html
@@ -38,7 +38,7 @@
     @if (getEventDown(eventsArray, i); as down) {
       @if (getEventDistance(eventsArray, i); as dist) {
         <div
-          class="event-short-view">{{ down }}&nbsp;&&nbsp;{{ dist }}
+          class="event-short-view">{{ down }}&nbsp;&&nbsp;{{ isDistanceOrGoal(dist, getBallOn(eventsArray, i), getEventPlayType(eventsArray, i)) }}
         </div>
       }
     }
