football events chack ballon and moved on on prev and next

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/football-event-short-view/football-event-short-view.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/football-event-short-view/football-event-short-view.component.html
@@ -14,18 +14,24 @@
       </div>
     }
     @if (getBallOn(eventsArray, i); as ballOn) {
-      <div class="event-short-view">BallOn: {{ ballOn }}&nbsp;</div>
+      <div class="event-short-view"
+           [style.background-color]='isMinCautionColor(!isPrevBallMovedEqualCurrentBallOn(eventsArray, i))'>
+        BallOn: {{ ballOn }}&nbsp;
+      </div>
     }
 
-    @if (getBallMovedOn(eventsArray, i); as ballMovedOn) {
-      <div class="event-short-view">BallMovedOn: {{ ballMovedOn }}&nbsp;</div>
+    @if (getBallMovedOn(eventsArray, i) !== null && getBallMovedOn(eventsArray, i) !== undefined) {
+      <div class="event-short-view"
+           [style.background-color]='isMinCautionColor(!isNextBallOnEqualCurrentBallMoved(eventsArray, i))'>
+        BallMovedOn: {{ getBallMovedOn(eventsArray, i) }}&nbsp;
+      </div>
     }
 
     @if (getBallOn(eventsArray, i); as ballOn) {
-      @if (getBallMovedOn(eventsArray, i); as ballMovedOn) {
-        @if (maxFieldLength) {
-          <div class="event-short-view">Dist: {{ computeDistance(ballMovedOn, ballOn, maxFieldLength / 2) }}&nbsp;</div>
-        }
+      @if (maxFieldLength) {
+        <div class="event-short-view">
+          Dist: {{ computeDistance(getBallMovedOn(eventsArray, i), ballOn, maxFieldLength / 2) }}&nbsp;
+        </div>
       }
     }
 
