--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -79,34 +79,8 @@
                 }
               </div>
 
-              <!--BALL ON-->
-                <!--              @if (getBallOnFormControl(this.eventForm, this.arrayName, i); as control) {-->
+              <!--BALLON & BALLMOVED-->
               <div class="event-ballon-distance">
-                <!--                  <div class="event-table-cell">-->
-                <!--                    <div class="tui-text_h6" style="justify-self: center; align-self: center">-->
-                <!--                      @if (getEventDistanceOnOffenceFormControl(this.eventForm, this.arrayName, i); as control) {-->
-                <!--                        @if (getEventIsFumble(eventsArray, i)) {-->
-                <!--                          <div class="event-table-cell">-->
-                <!--                            <app-input-number-with-buttons-->
-                <!--                              [size]="'l'"-->
-                <!--                              [control]="control"-->
-                <!--                              [label]="'dist passed'"-->
-                <!--                              [index]="i"-->
-                <!--                              [min]="-110"-->
-                <!--                              [max]="110"-->
-                <!--                              [key]="eventDistanceOnOffenceKey"-->
-                <!--                              (numberChanged)="handleFieldChange($event)"-->
-                <!--                            ></app-input-number-with-buttons>-->
-                <!--                          </div>-->
-                <!--                        } @else {-->
-                <!--                          @if ((getEventDistanceMoved(eventsArray, i)) ||-->
-                <!--                          (getEventDistanceMoved(eventsArray, i) === 0)) {-->
-                <!--                            Distance moved: {{ getEventDistanceMoved(eventsArray, i) }}-->
-                <!--                          }-->
-                <!--                        }-->
-                <!--                      }-->
-                <!--                    </div>-->
-                <!--                  </div>-->
                 @if (getBallOnFormControl(this.eventForm, this.arrayName, i); as control) {
                   <div class="event-table-cell">
                     @if (match.match_data?.field_length; as fieldLength) {
@@ -194,24 +168,6 @@
                         </div>
                       }
                     </div>
-                    <!--                  @if (getBallMovedOnFormControl(this.eventForm, this.arrayName, i); as control) {-->
-                      <!--                    <div class="event-table-cell">-->
-                      <!--                      <div class="tui-text_h6" style="justify-self: center; align-self: center">-->
-                      <!--                        <div class="event-table-cell">-->
-                      <!--                          <app-input-number-with-buttons-->
-                      <!--                            [size]="'l'"-->
-                      <!--                            [control]="control"-->
-                      <!--                            [label]="'dist passed'"-->
-                      <!--                            [index]="i"-->
-                      <!--                            [min]="-110"-->
-                      <!--                            [max]="110"-->
-                      <!--                            [key]="eventBallMovedOnKey"-->
-                      <!--                            (numberChanged)="handleFieldChange($event)"-->
-                      <!--                          ></app-input-number-with-buttons>-->
-                      <!--                        </div>-->
-                      <!--                      </div>-->
-                      <!--                    </div>-->
-                      <!--                  }-->
                   }
                 }
               </div>
