--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -83,29 +83,29 @@ label {
   //padding: 10px;
 }
 
-.input-number-with-buttons {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: auto auto;
-  grid-gap: 5px;
-  justify-content: center;
-  align-items: center;
-}
-
-.input-number {
-  grid-column: 1 / 2;
-  grid-row: 1 / 3;
-}
-
-.increment-button {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-}
-
-.decrement-button {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-}
+//.input-number-with-buttons {
+//  display: grid;
+//  grid-template-columns: 1fr auto;
+//  grid-template-rows: auto auto;
+//  grid-gap: 5px;
+//  justify-content: center;
+//  align-items: center;
+//}
+//
+//.input-number {
+//  grid-column: 1 / 2;
+//  grid-row: 1 / 3;
+//}
+//
+//.increment-button {
+//  grid-column: 2 / 3;
+//  grid-row: 1 / 2;
+//}
+//
+//.decrement-button {
+//  grid-column: 2 / 3;
+//  grid-row: 2 / 3;
+//}
 
 .event-short-view-container {
   display: flex;
