football event onkickto change returnedto if null

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -124,6 +124,7 @@
                           [min]="-((fieldLength / 2) - 1)"
                           [max]="fieldLength / 2"
                           (incrementEvent)="incrementBallOnPosition(getEventBallKickedTo(eventsArray, i), $event, control, eventsArray, i, fieldLength, eventBallKickedToKey)"
+                          (valueChanged)="onKickBallChange(eventsArray, i, $event)"
                         ></app-input-numbers-with-increment-buttons>
                       }
                     </div>
