football event calculate return

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/football-event-short-view/football-event-short-view.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/football-event-short-view/football-event-short-view.component.html
@@ -27,10 +27,21 @@
       </div>
     }
 
-    @if (getBallOn(eventsArray, i); as ballOn) {
+    @if (!isReturnPlay(eventsArray, i)) {
+      @if (getBallOn(eventsArray, i); as ballOn) {
+        @if (maxFieldLength) {
+          <div class="event-short-view">
+            Dist: {{ computeDistance(getBallMovedOn(eventsArray, i), ballOn, maxFieldLength / 2) }}&nbsp;
+          </div>
+        }
+      }
+    }
+
+    @if (isReturnPlay(eventsArray, i)) {
       @if (maxFieldLength) {
         <div class="event-short-view">
-          Dist: {{ computeDistance(getBallMovedOn(eventsArray, i), ballOn, maxFieldLength / 2) }}&nbsp;
+          Return
+          Dist: {{ computeDistanceOnReturn(getEventBallReturnedTo(eventsArray, i), getEventBallKickedTo(eventsArray, i), maxFieldLength / 2) }}&nbsp;
         </div>
       }
     }
